finalizacao tela de login e incio da tela de extrato e remoção do componente carrosel

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -24,12 +24,12 @@
                 </div>
         
                 <div class="profile-item">
-                    <img src="/avatar2.png" alt="Jenda">
+                    <img src="/avatar3.png" alt="Jenda">
                     <span>Jenda</span>
                 </div>
         
                 <div class="profile-item">
-                    <img src="/avatar3.png" alt="Alberto">
+                    <img src="/avatar2.png" alt="Alberto">
                     <span>Alberto</span>
                 </div>
         
@@ -48,20 +48,20 @@
     
     <footer class="bottom-nav">
         <a routerLink="/home" routerLinkActive="active" class="nav-item">
-            <img src="/usuario.png" alt="Home">
+            <img src="/home.png" alt="Home">
             <span>Home</span>
         </a>
-        <a routerLink="/statistics" routerLinkActive="active" class="nav-item">
-            <img src="/Gestao.png" alt="Statistics">
-            <span>Statistics</span>
+        <a routerLink="/extrato" routerLinkActive="active" class="nav-item">
+            <img src="/grafico.png" alt="Statistics">
+            <span>Extrato</span>
         </a>
         <a routerLink="/transactions" routerLinkActive="active" class="nav-item">
-            <img src="/Seguranca.png" alt="Transactions">
+            <img src="/carteira.png" alt="Transactions">
             <span>Transactions</span>
         </a>
-        <a routerLink="/profile" routerLinkActive="active" class="nav-item">
+        <!-- <a routerLink="/profile" routerLinkActive="active" class="nav-item">
             <img src="/perfil.png" alt="Profile">
             <span>Profile</span>
-        </a>
+        </a> -->
     </footer>
 </div>
