--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -75,6 +75,7 @@
   cursor: pointer;
   transition: all 0.3s ease;
   min-width: 70px;
+ 
 }
 
 .profile-item:hover {
@@ -148,7 +149,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: var(--color-card);
+  background-color: var(--color-primary);
   display: flex;
   justify-content: space-around;
   padding: 12px 0;
@@ -162,7 +163,7 @@
   flex-direction: column;
   align-items: center;
   text-decoration: none;
-  color: var(--color-text-secondary);
+  color: var(--color-text-light);
   font-size: 0.8rem;
   transition: all 0.3s ease;
   padding: 8px 16px;
@@ -178,8 +179,8 @@
 }
 
 .nav-item.active {
-  color: var(--color-primary);
-  background-color: rgba(76, 68, 255, 0.1);
+  color: var(--color-background);
+  background-color: rgba(255, 255, 255, 0.866);
 }
 
 .nav-item.active img {
@@ -189,8 +190,8 @@
 
 /* Efeitos Hover */
 .nav-item:hover {
-  color: var(--color-primary);
-  background-color: rgba(76, 68, 255, 0.05);
+  color: var(--color-background);
+  background-color: rgba(255, 255, 255, 0.866);
   transform: translateY(-2px);
 }
 
