--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -1,5 +1,4 @@
-/* Importação da fonte Inter */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
+/* Font Inter is loaded in index.html */
 
 :host {
   display: flex;
@@ -258,4 +257,3 @@
     margin-bottom: 30px;
   }
 }
-
